--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@types/p5": "^0.9.1",
+    "@types/three": "^0.127.0",
     "D": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "eslint-config-standard": "^16.0.2",
@@ -32,7 +33,10 @@
     "eslint-plugin-standard": "^5.0.0",
     "p5": "^1.3.0",
     "rxjs": "~6.5.4",
+    "save": "^2.4.0",
+    "save-dev": "0.0.1-security",
     "standard": "^16.0.3",
+    "three": "^0.127.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
