--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@types/dat-gui": "^0.6.3",
     "@types/p5": "^0.9.1",
     "@types/three": "^0.127.0",
     "D": "^1.0.0",
     "babel-eslint": "^10.1.0",
+    "dat.gui": "^0.7.7",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
