--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "D": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "dat.gui": "^0.7.7",
+    "date-fns": "^2.21.1",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
