--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.13",
+    "@angular/animations": "~10.2.5",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
+    "@angular/core": "~10.2.5",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~9.1.13",
+    "@angular/forms": "~10.2.5",
+    "@angular/localize": "^10.2.5",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "@types/dat-gui": "^0.6.3",
     "@types/p5": "^0.9.1",
     "@types/suncalc": "^1.8.0",
     "@types/three": "^0.127.0",
-    "D": "^1.0.0",
     "babel-eslint": "^10.1.0",
+    "D": "^1.0.0",
     "dat.gui": "^0.7.7",
     "date-fns": "^2.21.1",
     "eslint-config-standard": "^16.0.2",
@@ -46,9 +47,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler-cli": "~9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular/cli": "^10.2.3",
+    "@angular/compiler-cli": "~10.2.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -67,6 +68,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.6"
   }
 }
