--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.5",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~10.2.5",
-    "@angular/compiler": "~10.2.5",
-    "@angular/core": "~10.2.5",
+    "@angular/animations": "~11.2.14",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~10.2.5",
-    "@angular/localize": "^10.2.5",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~10.2.5",
-    "@angular/platform-browser-dynamic": "~10.2.5",
-    "@angular/router": "~10.2.5",
-    "@types/dat-gui": "^0.6.3",
+    "@angular/forms": "~11.2.14",
+    "@angular/localize": "^11.2.14",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
+    "@types/dat.gui": "^0.7.7",
     "@types/p5": "^0.9.1",
     "@types/suncalc": "^1.8.0",
     "@types/three": "^0.127.0",
@@ -35,7 +35,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^5.0.0",
     "p5": "^1.3.0",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
@@ -47,9 +46,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular/cli": "^10.2.3",
-    "@angular/compiler-cli": "~10.2.5",
+    "@angular-devkit/build-angular": "~0.1102.15",
+    "@angular/cli": "^11.2.15",
+    "@angular/compiler-cli": "~11.2.14",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -60,7 +59,7 @@
     "eslint": "^7.23.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
+    "karma": "~6.3.7",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
@@ -68,6 +67,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^3.9.6"
+    "typescript": "^4.1.6"
   }
 }
