--- a/package.json
+++ b/package.json
@@ -11,30 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/cdk": "^13.0.0",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "~13.0.0",
-    "@angular/localize": "^13.0.0",
-    "@angular/material": "^13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
+    "@angular/animations": "~13.1.2",
+    "@angular/cdk": "^13.1.2",
+    "@angular/common": "~13.1.2",
+    "@angular/compiler": "~13.1.2",
+    "@angular/core": "~13.1.2",
+    "@angular/flex-layout": "^13.0.0-beta.36",
+    "@angular/forms": "~13.1.2",
+    "@angular/localize": "^13.1.2",
+    "@angular/material": "^13.1.2",
+    "@angular/platform-browser": "~13.1.2",
+    "@angular/platform-browser-dynamic": "~13.1.2",
+    "@angular/router": "~13.1.2",
     "@types/dat.gui": "^0.7.7",
     "@types/p5": "^0.9.1",
     "@types/suncalc": "^1.8.0",
     "@types/three": "^0.133.1",
     "dat.gui": "^0.7.7",
-    "date-fns": "^2.21.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
+    "date-fns": "~2.28.0",
     "p5": "^1.3.0",
-    "rxjs": "~7.4.0",
+    "rxjs": "~7.5.2",
     "save": "^2.4.0",
     "save-dev": "0.0.1-security",
     "standard": "^16.0.3",
@@ -44,26 +40,23 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.1",
-    "@angular/cli": "^13.0.1",
-    "@angular/compiler-cli": "~13.0.0",
-    "@types/jasmine": "~3.10.2",
+    "@angular-devkit/build-angular": "~13.1.3",
+    "@angular/cli": "^13.1.3",
+    "@angular/compiler-cli": "~13.1.2",
+    "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "angular-cli-ghpages": "^1.0.0-rc.2",
-    "codelyzer": "^6.0.2",
-    "eslint": "^8.2.0",
+    "@types/node": "^17.0.8",
+    "angular-cli-ghpages": "^1.0.0",
+    "codelyzer": "^6.0.2",    
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.7",
+    "karma": "~6.3.11",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   }
 }
