--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~13.1.2",
     "@angular/platform-browser-dynamic": "~13.1.2",
     "@angular/router": "~13.1.2",
+    "@microsoft/signalr": "^6.0.1",
     "@types/dat.gui": "^0.7.7",
     "@types/p5": "^0.9.1",
     "@types/suncalc": "^1.8.0",
@@ -47,7 +48,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^17.0.8",
     "angular-cli-ghpages": "^1.0.0",
-    "codelyzer": "^6.0.2",    
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.11",
