--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/three": "^0.133.1",
     "dat.gui": "^0.7.7",
     "date-fns": "~2.28.0",
+    "delaunator": "^5.0.0",
     "p5": "^1.3.0",
     "rxjs": "~7.5.2",
     "save": "^2.4.0",
