--- a/package.json
+++ b/package.json
@@ -48,8 +48,12 @@
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "angular-cli-ghpages": "^1.0.0",
     "codelyzer": "^6.0.2",
+    "eslint": "^8.7.0",
+    "eslint-plugin-react": "^7.28.0",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.11",
@@ -59,6 +63,6 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   }
 }
